--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -5957,6 +5957,8 @@ galaxyspace {
     B:barnarda2leaves=false
     B:barnarda2log=true
     B:barnarda2sapling=false
+    B:barnardaEgrunt=true
+    B:barnardaEsubgrunt=true
     B:ceresTChestT4=false
     B:ceresbricks=true
     B:ceresglowstone=true
