--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -377,6 +377,12 @@ shedding {
     I:EvolvedBossWolf.metadata=0
     I:EvolvedBossWolf.rate=-1
 
+    # Configuration of Shedding for EvolvedColdBlaze
+    S:EvolvedColdBlaze.item=
+    I:EvolvedColdBlaze.lexiconDisplaySize=40
+    I:EvolvedColdBlaze.metadata=0
+    I:EvolvedColdBlaze.rate=-1
+
     # Configuration of Shedding for EvolvedCreeper
     S:EvolvedCreeper.item=
     I:EvolvedCreeper.lexiconDisplaySize=40
@@ -482,6 +488,12 @@ shedding {
     I:GalacticraftCore.EvolvedBossWolf.lexiconDisplaySize=40
     I:GalacticraftCore.EvolvedBossWolf.metadata=0
     I:GalacticraftCore.EvolvedBossWolf.rate=-1
+
+    # Configuration of Shedding for GalacticraftCore.EvolvedColdBlaze
+    S:GalacticraftCore.EvolvedColdBlaze.item=
+    I:GalacticraftCore.EvolvedColdBlaze.lexiconDisplaySize=40
+    I:GalacticraftCore.EvolvedColdBlaze.metadata=0
+    I:GalacticraftCore.EvolvedColdBlaze.rate=-1
 
     # Configuration of Shedding for GalacticraftCore.EvolvedCreeper
     S:GalacticraftCore.EvolvedCreeper.item=
