--- a/config/GalaxySpace/dimensions.conf
+++ b/config/GalaxySpace/dimensions.conf
@@ -1,6 +1,12 @@
 # Configuration file
 
 dimensions {
+    # Dimension ID for Barnarda C
+    I:dimensionIDBarnardaC=-22
+
+    # Dimension ID for Barnarda E
+    I:dimensionIDBarnardaE=-23
+
     # Dimension ID for Alpha Centauri Bb
     I:dimensionIDCentauriBb=-21
 
@@ -57,8 +63,6 @@ dimensions {
 
     # Dimension ID for Venus
     I:dimensionIDVenus=-6
-
-    # Dimension ID for Barnarda 2
     I:dimensionIDdimensionIDBarnarda2=-22
 }
 
@@ -114,6 +118,15 @@ general {
 
     # Enable/Disable Unreachable Planets/Moons
     B:enableUnreachable=true
+
+    # Enable/Disable Alpha Centauri Bb
+    B:enableACentauriBb=true
+
+    # Enable/Disable Barnarda C (Habitable Planet)
+    B:enableBarnardaC=true
+
+    # Enable/Disable Barnarda E
+    B:enableBarnardaE=true
 }
 
 
