--- a/config/GalaxySpace/biomes.conf
+++ b/config/GalaxySpace/biomes.conf
@@ -4,8 +4,11 @@ dimensions {
     # ID Biome for ACentauri Bb
     I:IDACentauriBbBiome=218
 
-    # ID Biome for Barnarda
+    # ID Biome for Barnarda C (219, 220, 221)
     I:IDBarnarda2Biome=219
+
+    # ID Biome for Barnarda E
+    I:IDBarnardaEBiome=222
 
     # ID Biome for Ceres
     I:IDCeresBiome=203
