--- a/config/GalaxySpace/core.conf
+++ b/config/GalaxySpace/core.conf
@@ -4,6 +4,9 @@ general {
     # Enable/Disable new recipes rocket (Tier 1-3).
     B:"New Recipes Rocket"=true
 
+    # Enable/Disable Holiday Message.
+    B:enableHolidayMessage=false
+
     # Enable/Disable Check Version.
     B:enableCheckVersion=true
 
