bunches of balance changes revolving around swapping flans for guncus

--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -7,6 +7,7 @@ additional {
         Butterfly
         Cricket
         Centipede
+        Moth
      >
 
     # Should player inventories be stored after death (can be later restored with ob_inventory command)
