--- a/config/Stackie.cfg
+++ b/config/Stackie.cfg
@@ -37,4 +37,24 @@ general {
      >
 }
 
+#GunCus:item.WholyGunCustom.HK_USP_9mm.magazine-6
+#GunCus:item.WholyGunCustom.M1911.magazine-6
+#GunCus:item.WholyGunCustom.Flame-thrower.magazine-2
+#GunCus:item.WholyGunCustom.MP5.magazine-5
+#GunCus:item.WholyGunCustom.magnumrifle.magazine-6
+#GunCus:item.WholyGunCustom.Steyr_AUG_a3.magazine-5
+#GunCus:item.WholyGunCustom.M4A1.magazine-3
+#GunCus:item.WholyGunCustom.P90.magazine-2
+#GunCus:item.WholyGunCustom.FAMAS.magazine-5
+#GunCus:item.WholyGunCustom.Desert_Eagle.magazine-6
+#GunCus:item.WholyGunCustom.UMP45.magazine-5
+#GunCus:item.WholyGunCustom.AK47.magazine-3
+#GunCus:item.WholyGunCustom.IMI_Galil.magazine-3
+#GunCus:item.WholyGunCustom.HK416.magazine-4
+#GunCus:item.WholyGunCustom.SPAS12.magazine-6
+#GunCus:item.WholyGunCustom.Barret_M82A1.magazine-6
+#GunCus:item.WholyGunCustom.M249.magazine-2
+#GunCus:item.WholyGunCustom.XM8.magazine-2
+#GunCus:item.WholyGunCustom.HAMR.magazine-2
+
 
