--- a/local/ftbu/config.json
+++ b/local/ftbu/config.json
@@ -52,8 +52,12 @@
       "minecraft:stone_pickaxe 1 0",
       "minecraft:stone_axe 1 0",
       "minecraft:stone_shovel 1 0",
-      "flansmod:m9 1 0",
-      "flansmod:m9Ammo 5 0",
+      "GunCus:item.WholyGunCustom.HK_USP_9mm 1 336",
+      "GunCus:item.WholyGunCustom.HK_USP_9mm.magazine 1 0",
+      "GunCus:item.WholyGunCustom.HK_USP_9mm.magazine 1 0",
+      "GunCus:item.WholyGunCustom.HK_USP_9mm.magazine 1 0",
+      "GunCus:item.WholyGunCustom.HK_USP_9mm.magazine 1 0",
+      "GunCus:item.WholyGunCustom.HK_USP_9mm.magazine 1 0",
       "OpenBlocks:sleepingBag 1 0",
       "harvestcraft:epicbaconItem 2 0",
       "minecraft:torch 8 0",
