--- a/config/LaunchGui.cfg
+++ b/config/LaunchGui.cfg
@@ -152,7 +152,7 @@ notice {
         # %name% - Provides modpackName
         # %version% - Provides modpackVersion
         # %acro% - Provides modpackAcronym [default: ]
-        S:startupGuiLines=Welcome to the Revolution pack!\nNormally, breaking news is featured in this window, but Minecraft was unable to communicate with the news site.
+        S:startupGuiLines=Welcome to the Revolution pack!\nNormally, breaking news is featured in this window, but Minecraft was unable to communicate with the news site. This is usually a temporary situation and fixes itself.
 
         # Title of the startup GUI. Shows as yellow text. [default: TITLE]
         S:startupGuiTitle=Revolution
