Pre-deploy to dev server

--- a/GunCus/WholyGunCustom/guns/flamethrower.cfg
+++ b/GunCus/WholyGunCustom/guns/flamethrower.cfg
@@ -30,7 +30,7 @@ general {
     I:Magsize=40
 
     # Name of the gun
-    S:Name=Flame-thrower
+    S:Name=Flamethrower
 
     # Sound played when shooting.
     # Select the sound file in the sounds.json file. Only .ogg files are supported by Minecraft.
