Removing JurassiCraft, GalaxySpace and GeoStrata

--- a/local/client/config.json
+++ b/local/client/config.json
@@ -13,6 +13,9 @@
     "sort_friends_az": false
   },
   "sidebar_buttons": {
+    "claims": true,
+    "guide": true,
+    "info": true,
     "settings": true
   }
 }
