--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -13706,6 +13706,12 @@ thermalfoundation {
 }
 
 
+tis3d {
+    B:casing=false
+    B:controller=false
+}
+
+
 twilightforest {
     B:tileAuroraDoubleSlab=true
     B:tileAuroraPillar=true
