--- a/config/bigtrees/biomegroups.cfg
+++ b/config/bigtrees/biomegroups.cfg
@@ -658,8 +658,6 @@
         biomesoplenty.JungleHills
         biomesoplenty.Jungle
      >
-
-    # overrides above groups
     S:"DENSE AND SPARSE" <
         twilightforest.Dense Twilight Forest
      >
@@ -921,8 +919,6 @@
         biomesoplenty.Lavender Fields
         biomesoplenty.Grassland
      >
-
-    # overrides above groups
     S:"LUSH AND SPOOKY" <
         biomesoplenty.Spectral Garden
      >
@@ -1017,8 +1013,6 @@
     S:"MUSHROOM AND BEACH" <
         minecraft.MushroomIslandShore
      >
-
-    # overrides above groups
     S:"NETHER AND COLD" <
         biomesoplenty.Polar Chasm
      >
@@ -1071,6 +1065,8 @@
         biomesoplenty.Grove
         biomesoplenty.Brushland
      >
+
+    # overrides above groups
     S:"PLAINS AND HOT" <
         biomesoplenty.Dry River
      >
@@ -1105,6 +1101,12 @@
         biomesoplenty.Shrubland
         biomesoplenty.Prairie
         biomesoplenty.Lavender Fields
+     >
+
+    # overrides above groups
+    S:"PLAINS AND WET" <
+        biomesoplenty.Eucalyptus Forest
+        biomesoplenty.Land of Lakes
      >
 
     # overrides above groups
@@ -1149,6 +1151,8 @@
     S:"SANDY AND NETHER" <
         biomesoplenty.Corrupted Sands
      >
+
+    # overrides above groups
     S:"SANDY AND PLAINS" <
         biomesoplenty.Dry River
      >
@@ -1198,8 +1202,6 @@
         biomesoplenty.Alps
         minecraft.Ice Mountains
      >
-
-    # overrides above groups
     S:"SNOWY AND NETHER" <
         biomesoplenty.Polar Chasm
      >
@@ -5103,6 +5105,37 @@
     S:"PLAINS AND SPARSE Tall Oak Autumn"=
     S:"PLAINS AND SPARSE Tall Oak Brown"=
     S:"PLAINS AND SPARSE Yellow Big Birch"=
+    S:"PLAINS AND WET Big Birch 0"=
+    S:"PLAINS AND WET Big Birch 1"=
+    S:"PLAINS AND WET Big Pine 0"=
+    S:"PLAINS AND WET Big Pine 1"=
+    S:"PLAINS AND WET Block Maple"=
+    S:"PLAINS AND WET Block Oak 0"=
+    S:"PLAINS AND WET Block Oak Autumn"=
+    S:"PLAINS AND WET Block Oak Brown"=
+    S:"PLAINS AND WET Block Oak Dark"=
+    S:"PLAINS AND WET Cyprus Oak 0"=
+    S:"PLAINS AND WET Cyprus Willow"=
+    S:"PLAINS AND WET Dark Hat"=
+    S:"PLAINS AND WET Dead Tree 0"=
+    S:"PLAINS AND WET Great Oak 0"=
+    S:"PLAINS AND WET Great Oak Autumn"=
+    S:"PLAINS AND WET Great Oak Brown"=
+    S:"PLAINS AND WET Great Oak Dark"=
+    S:"PLAINS AND WET Hat Sacred Tree"=
+    S:"PLAINS AND WET Hat Tree 0"=
+    S:"PLAINS AND WET Pertrified Dead Tree"=
+    S:"PLAINS AND WET Swamp Oak 0"=
+    S:"PLAINS AND WET Tall Cherry"=
+    S:"PLAINS AND WET Tall Dark Oak"=
+    S:"PLAINS AND WET Tall Fir"=
+    S:"PLAINS AND WET Tall Jacaranda"=
+    S:"PLAINS AND WET Tall Magic Tree"=
+    S:"PLAINS AND WET Tall Maple"=
+    S:"PLAINS AND WET Tall Oak 0"=
+    S:"PLAINS AND WET Tall Oak Autumn"=
+    S:"PLAINS AND WET Tall Oak Brown"=
+    S:"PLAINS AND WET Yellow Big Birch"=
     I:"PLAINS Big Birch 0"=10
     I:"PLAINS Big Birch 1"=3
     I:"PLAINS Big Pine 0"=40
