--- a/config/SpiceOfLife.cfg
+++ b/config/SpiceOfLife.cfg
@@ -84,7 +84,7 @@ server {
     D:food.eating.speed.modifier=1.0
 
     # The maximum amount of eaten foods stored in the history at a time
-    I:food.history.length=12
+    I:food.history.length=16
 
     # If true, food history will not get reset after every death
     B:food.history.persists.through.death=false
@@ -130,7 +130,7 @@ server {
     # For example, a food.history.length length of 12 will store a max of 2 foods that restored 6 hunger each, 
     # 3 foods that restored 4 hunger each, 12 foods that restored 1 hunger each, etc
     # NOTE: food.history.length uses hunger units, where 1 hunger unit = 1/2 hunger bar
-    B:use.hunger.restored.for.food.history.length=false
+    B:use.hunger.restored.for.food.history.length=true
 
     # If true, food.history.length will use time (in Minecraft days) instead of number of foods eaten for its maximum length
     # For example, a food.history.length length of 12 will store all foods eaten in the last 12 Minecraft days.
