--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -4290,6 +4290,7 @@ chromaticraft {
     B:chromaticraftblockhover.9=false
     B:chromaticraftblocklamp=false
     B:chromaticraftblocklampblock=false
+    B:chromaticraftblocklight=false
     B:chromaticraftblocklockfence=false
     B:chromaticraftblocklockfreeze=false
     B:chromaticraftblocklockkey=false
@@ -6495,11 +6496,20 @@ gardentrees {
     B:thinlog.1290=false
     B:thinlog.12909=false
     B:thinlog.12919=false
+    B:thinlog.12984=false
+    B:thinlog.12985=false
+    B:thinlog.12986=false
+    B:thinlog.12987=false
     B:thinlog.1299=false
+    B:thinlog.13016=false
+    B:thinlog.13017=false
+    B:thinlog.13018=false
+    B:thinlog.13019=false
     B:thinlog.13027=false
     B:thinlog.13028=false
     B:thinlog.13029=false
     B:thinlog.13030=false
+    B:thinlog.13031=false
     B:thinlog.13058=false
     B:thinlog.13059=false
     B:thinlog.13060=false
@@ -6670,14 +6680,23 @@ gardentrees {
     B:thinlog.4727=false
     B:thinlog.478=false
     B:thinlog.479=false
+    B:thinlog.4792=false
+    B:thinlog.4793=false
+    B:thinlog.4794=false
+    B:thinlog.4795=false
     B:thinlog.480=false
     B:thinlog.481=false
     B:thinlog.482=false
+    B:thinlog.4824=false
+    B:thinlog.4825=false
+    B:thinlog.4826=false
+    B:thinlog.4827=false
     B:thinlog.483=false
     B:thinlog.4835=false
     B:thinlog.4836=false
     B:thinlog.4837=false
     B:thinlog.4838=false
+    B:thinlog.4839=false
     B:thinlog.4857=false
     B:thinlog.4863=false
     B:thinlog.4865=false
@@ -6823,10 +6842,19 @@ gardentrees {
     B:thinlog.62283=false
     B:thinlog.62284=false
     B:thinlog.631=false
+    B:thinlog.696=false
+    B:thinlog.697=false
+    B:thinlog.698=false
+    B:thinlog.699=false
+    B:thinlog.728=false
+    B:thinlog.729=false
+    B:thinlog.730=false
+    B:thinlog.731=false
     B:thinlog.739=false
     B:thinlog.740=false
     B:thinlog.741=false
     B:thinlog.742=false
+    B:thinlog.743=false
     B:thinlog.761=false
     B:thinlog.767=false
     B:thinlog.769=false
@@ -6881,10 +6909,19 @@ gardentrees {
     B:thinlog.8787=false
     B:thinlog.8813=false
     B:thinlog.8823=false
+    B:thinlog.8888=false
+    B:thinlog.8889=false
+    B:thinlog.8890=false
+    B:thinlog.8891=false
+    B:thinlog.8920=false
+    B:thinlog.8921=false
+    B:thinlog.8922=false
+    B:thinlog.8923=false
     B:thinlog.8931=false
     B:thinlog.8932=false
     B:thinlog.8933=false
     B:thinlog.8934=false
+    B:thinlog.8935=false
     B:thinlog.8962=false
     B:thinlog.8963=false
     B:thinlog.8964=false
@@ -7102,11 +7139,20 @@ gardentrees {
     B:thinlogfence.1290=false
     B:thinlogfence.12909=false
     B:thinlogfence.12919=false
+    B:thinlogfence.12984=false
+    B:thinlogfence.12985=false
+    B:thinlogfence.12986=false
+    B:thinlogfence.12987=false
     B:thinlogfence.1299=false
+    B:thinlogfence.13016=false
+    B:thinlogfence.13017=false
+    B:thinlogfence.13018=false
+    B:thinlogfence.13019=false
     B:thinlogfence.13027=false
     B:thinlogfence.13028=false
     B:thinlogfence.13029=false
     B:thinlogfence.13030=false
+    B:thinlogfence.13031=false
     B:thinlogfence.13058=false
     B:thinlogfence.13059=false
     B:thinlogfence.13060=false
@@ -7277,14 +7323,23 @@ gardentrees {
     B:thinlogfence.4727=false
     B:thinlogfence.478=false
     B:thinlogfence.479=false
+    B:thinlogfence.4792=false
+    B:thinlogfence.4793=false
+    B:thinlogfence.4794=false
+    B:thinlogfence.4795=false
     B:thinlogfence.480=false
     B:thinlogfence.481=false
     B:thinlogfence.482=false
+    B:thinlogfence.4824=false
+    B:thinlogfence.4825=false
+    B:thinlogfence.4826=false
+    B:thinlogfence.4827=false
     B:thinlogfence.483=false
     B:thinlogfence.4835=false
     B:thinlogfence.4836=false
     B:thinlogfence.4837=false
     B:thinlogfence.4838=false
+    B:thinlogfence.4839=false
     B:thinlogfence.4857=false
     B:thinlogfence.4863=false
     B:thinlogfence.4865=false
@@ -7430,10 +7485,19 @@ gardentrees {
     B:thinlogfence.62283=false
     B:thinlogfence.62284=false
     B:thinlogfence.631=false
+    B:thinlogfence.696=false
+    B:thinlogfence.697=false
+    B:thinlogfence.698=false
+    B:thinlogfence.699=false
+    B:thinlogfence.728=false
+    B:thinlogfence.729=false
+    B:thinlogfence.730=false
+    B:thinlogfence.731=false
     B:thinlogfence.739=false
     B:thinlogfence.740=false
     B:thinlogfence.741=false
     B:thinlogfence.742=false
+    B:thinlogfence.743=false
     B:thinlogfence.761=false
     B:thinlogfence.767=false
     B:thinlogfence.769=false
@@ -7488,10 +7552,19 @@ gardentrees {
     B:thinlogfence.8787=false
     B:thinlogfence.8813=false
     B:thinlogfence.8823=false
+    B:thinlogfence.8888=false
+    B:thinlogfence.8889=false
+    B:thinlogfence.8890=false
+    B:thinlogfence.8891=false
+    B:thinlogfence.8920=false
+    B:thinlogfence.8921=false
+    B:thinlogfence.8922=false
+    B:thinlogfence.8923=false
     B:thinlogfence.8931=false
     B:thinlogfence.8932=false
     B:thinlogfence.8933=false
     B:thinlogfence.8934=false
+    B:thinlogfence.8935=false
     B:thinlogfence.8962=false
     B:thinlogfence.8963=false
     B:thinlogfence.8964=false
@@ -10444,11 +10517,13 @@ openblocks {
     B:bigbutton=false
     B:blockPlacer=false
     B:blockbreaker=false
+    B:builderguide=false
     B:cannon=false
     B:canvas=false
     B:donationStation=false
     B:drawingtable=false
     B:elevator=true
+    B:elevatorrotating=false
     B:fan=false
     B:flag=false
     B:goldenegg=false
@@ -11948,6 +12023,7 @@ securitycraft {
     B:mineCut=false
     B:panicButton=false
     B:portableRadar=false
+    B:protecto=false
     B:reinforcedCobblestone=false
     B:reinforcedDirt=false
     B:reinforcedDirtSlab.3=false
