--- a/config/OpenBlocks.cfg
+++ b/config/OpenBlocks.cfg
@@ -22,12 +22,14 @@ blocks {
     B:bigbutton=true
     B:blockPlacer=true
     B:blockbreaker=true
+    B:builder_guide=true
     B:cannon=true
     B:canvas=true
     B:canvasglass=true
     B:donationStation=true
     B:drawingtable=true
     B:elevator=true
+    B:elevator_rotating=true
     B:fan=true
     B:flag=true
     B:goldenegg=true
@@ -62,6 +64,9 @@ cartographer {
     S:blockBlacklist <
         "Natura:Cloud"
      >
+
+    # Should invalid height map request be always reported
+    B:reportInvalidRequest=false
 }
 
 
@@ -101,7 +106,15 @@ debug {
 }
 
 
+devnull {
+    # If true, /dev/null will require sneaking in addition to clicking air to open gui
+    B:sneakClickToGui=true
+}
+
+
 dropblock {
+    # Should elevator move player to center of block after teleporting	
+    B:centerOnBlock=false
     B:elevatorDrainsXP=false
 
     # XP consumed by elevator (total amount = ratio * distance)
@@ -161,8 +174,6 @@ features {
 
     # Id of last stand enchantment
     I:lastStandEnchantmentId=212
-
-    # Id of liquid XP fluid (WARNING: only for users who know what they are doing - changing this id can break worlds
     S:xpFluidId=xpjuice
 
     # Storage in mB needed to store single XP point
@@ -238,6 +249,7 @@ items {
     B:cursor=true
     B:devnull=true
     B:emptyMap=true
+    B:epicEraser=true
     B:filledbucket=true
     B:goldenEye=true
     B:hangglider=true
@@ -256,6 +268,13 @@ items {
     B:stencil=true
     B:tastyClay=true
     B:technicolorGlasses=true
+    B:wrench=true
+}
+
+
+ladder {
+    # If true, ladders will behave in old way: single item will place ladder all the way down, but it will not drop when broken
+    B:infiniteMode=false
 }
 
 
@@ -302,6 +321,9 @@ sponge {
 
 
 sprinkler {
+    # Consume rate of bonemeal (ticks/item).
+    I:bonemealConsumeRate=600
+
     # 1/chance that crops will be fertilized with bonemeal
     I:bonemealFertilizeChance=200
 
@@ -310,6 +332,12 @@ sprinkler {
 
     # 1/chance that crops will be fertilized without bonemeal
     I:fertilizeChance=500
+
+    # Capacity (in mB) of internal tank.
+    I:internalTankCapacity=50
+
+    # Consume rate of sprinkler (ticks/mB).
+    I:waterConsumeRate=20
 }
 
 
@@ -341,6 +369,9 @@ tomfoolery {
 
     # Allow only flimflams that don't cause death (or at least very rarely)
     B:safeOnly=false
+
+    # 0 - lore hidden, 1 - visible only with pressed ALT, 2 - always visible
+    I:sillyLoreDisplay=1
 
     # Are you serious too?
     B:weAreSeriousPeople=true
