--- a/config/Waila.cfg
+++ b/config/Waila.cfg
@@ -91,6 +91,7 @@ modules {
     B:pr.showdata=true
     B:pr.showio=true
     B:railcraft.fluidamount=true
+    B:securitycraft.showcustomname=true
     B:securitycraft.showmodules=true
     B:securitycraft.showowner=true
     B:securitycraft.showpasswords=true
@@ -224,6 +225,7 @@ server_forcing {
     B:pr.showdata=false
     B:pr.showio=false
     B:railcraft.fluidamount=false
+    B:securitycraft.showcustomname=false
     B:securitycraft.showmodules=false
     B:securitycraft.showowner=false
     B:securitycraft.showpasswords=false
