--- a/config/securitycraft.cfg
+++ b/config/securitycraft.cfg
@@ -3,6 +3,7 @@
 options {
     D:"Alarm sound volume:"=0.8
     B:"Are mines unbreakable?"=true
+    I:"Camera Speed when not using LookingGlass:"=2
     I:"Claymore range:"=5
     B:"Craftable Limited Use keycard?"=true
     B:"Craftable level 1 keycard?"=true
