--- a/config/tis3d.cfg
+++ b/config/tis3d.cfg
@@ -71,6 +71,11 @@ module {
         B:enabled=true
     }
 
+    eerialport {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
 }
 
 
