--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -30,7 +30,7 @@
     B:"Ender Forest Coloring"=false
     I:"Ender Pool Density from 1 to 3"=2
     I:"Energy Buffer Overlay Location"=0
-    B:"Forge G1GC To Prevent Crashes - Disabling this disables some content"=false
+    B:"Force Java 8 to use G1GC To Prevent Crashes - Disabling this disables some content"=true
     B:"Generate Anti-Taint plants in Rainbow Forest"=true
     B:"Generate Pylons in Non-Overworld"=false
     B:"Generate Some Pylons as Broken"=false
@@ -43,6 +43,7 @@
     B:"Make ThaumCraft integration require ThaumCraft progression"=true
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
+    B:"Notify other players of progress gains"=true
     B:"Pylons Chunkload Selves Once Used"=false
     I:"Rainbow Forest Animal Density"=6
     I:"Rainbow Forest Biome Weight"=5
