Updating EiraIRC config

--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -30,7 +30,7 @@
     B:"Ender Forest Coloring"=false
     I:"Ender Pool Density from 1 to 3"=2
     I:"Energy Buffer Overlay Location"=0
-    B:"Force Java 8 to use G1GC To Prevent Crashes - Disabling this disables some content"=true
+    B:"Force Java 8 to use G1GC To Prevent Crashes - Disabling this disables some content"=false
     B:"Generate Anti-Taint plants in Rainbow Forest"=true
     B:"Generate Pylons in Non-Overworld"=false
     B:"Generate Some Pylons as Broken"=false
