ChromatiCraft can't make natura trees for it's Dye trees

--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -61,6 +61,12 @@ general {
     # Set this to true to use alternate flower textures by Futureazoo, not all flowers are textured. http://redd.it/2b3o3f
     B:flowerTextures.alt=false
 
+    # The harvest level of the Mana Lens: Bore. 3 is diamond level. Defaults to 3
+    I:harvestLevel.boreLens=3
+
+    # The harvest level of the Mana Lens: Weight. 3 is diamond level. Defaults to 2 (iron level)
+    I:harvestLevel.weightLens=2
+
     # Set this to true to enable justified text in the Lexica Botania's text pages.
     B:lexicon.enable.justifiedText=false
 
@@ -118,6 +124,9 @@ general {
 
     # Do not ever touch this value if not asked to. Possible symptoms of doing so include your head turning backwards, the appearance of Titans near the walls or you being trapped in a game of Sword Art Online.
     I:spreader.posShift=1
+
+    # Set this to false to disable Thaumcraft Infusion Stabilizing in botania blocks
+    B:thaumraftStabilizers.enabled=true
 
     # Set this to false to always display all particles regardless of the "Particles" setting in the Vanilla options menu.
     B:vanillaParticleConfig.enabled=true
