--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -67,17 +67,17 @@
     B:Bamboo=true
     B:"Biomes O Plenty Mangrove"=true
     B:"Biomes O Plenty Willow"=true
-    B:Bloodwood=true
+    B:Bloodwood=false
     B:Canopy=true
     B:Cherry=true
     B:Dark=true
-    B:Darkwood=true
+    B:Darkwood=false
     B:Eucalyptus=true
     B:"ExtraBiomes XL Redwood"=true
     B:Fir=true
     B:Force=true
-    B:Fusewood=true
-    B:Ghostwood=true
+    B:Fusewood=false
+    B:Ghostwood=false
     B:Glow=true
     B:Greatwood=true
     B:Hawthorne=true
