Ender IO alloy smelter changes, arc furnace, and quests.

--- a/config/HarderOres.cfg
+++ b/config/HarderOres.cfg
@@ -61,6 +61,8 @@ ores {
 
     #  [range: 0 ~ 2, default: 1]
     I:OreExistsFlourite=2
+
+    #  [range: 0 ~ 2, default: 1]
     I:OreExistsLead=2
 
     #  [range: 0 ~ 2, default: 1]
