--- a/config/Reika/ChromatiCraft.cfg
+++ b/config/Reika/ChromatiCraft.cfg
@@ -43,7 +43,7 @@
     B:"Make ThaumCraft integration require ThaumCraft progression"=true
     I:"Max Accelerator Lag in NanoSeconds"=1000000
     B:"Nether Crystals"=true
-    B:"Notify other players of progress gains"=true
+    B:"Notify other players of progress gains"=false
     B:"Pylons Chunkload Selves Once Used"=false
     I:"Rainbow Forest Animal Density"=6
     I:"Rainbow Forest Biome Weight"=5
