--- a/config/railcraft/railcraft.cfg
+++ b/config/railcraft/railcraft.cfg
@@ -572,7 +572,7 @@ worldgen {
         B:saltpeter=true
         B:sulfur=true
         B:tin=false
-        B:workshop=true
+        B:workshop=false
     }
 
     id {
