--- a/config/Reika/RotaryCraft.cfg
+++ b/config/Reika/RotaryCraft.cfg
@@ -129,7 +129,7 @@
     B:"Tools Clear Chat"=false
     B:"Turrets can target players"=false
     B:"Tutorial Mode"=false
-    B:"Use Forestry Bees To Produce Yeast"=true
+    B:"Use Forestry Bees To Produce Yeast"=false
 }
 
 
