--- a/config/tis3d.cfg
+++ b/config/tis3d.cfg
@@ -9,6 +9,9 @@ controller {
 module {
 
     execution {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+
         # The maximum number of columns per line of an ASM program for an execution node may have. [range: 1 ~ 80, default: 18]
         I:maxColumnsPerLine=18
 
@@ -17,65 +20,111 @@ module {
     }
 
     infrared {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+
         # The maximum number of infrared packets that can be stored in the receiver's buffer. [range: 1 ~ 64, default: 16]
         I:maxQueueLength=16
     }
 
     uudio {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     uundledredstone {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     iisplay {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     xxecution {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     nnfrared {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     eeypad {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     eedstone {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     ttack {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     aandom {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     aandomaccessmemory {
-        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
     eerialport {
+        B:enabled=true
+    }
+
+    audio {
         # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
         B:enabled=true
     }
 
+    bundledredstone {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
+    display {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
+    keypad {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
+    redstone {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
+    serialport {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
+    stack {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
+    random {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
+    randomaccessmemory {
+        # Whether the module is enabled. Disabled modules are not registered, meaning if you disable them later on the items will disappear! [default: true]
+        B:enabled=true
+    }
+
+}
+
+
+network {
+    # The maximum number of status packets modules may send per tick. When this is exceeded, throttling kicks in. [range: 1 ~ 500, default: 10]
+    I:maxPacketsPerTick=10
+
+    # The maximum number of particle effects data transfer may trigger per tick. When this is exceeded, throttling kicks in. [range: 1 ~ 500, default: 5]
+    I:maxParticlesPerTick=5
 }
 
 
