--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -1,60 +1,139 @@
 # Configuration file
 
 "assorted parameters" {
+    # Use more random generators, better behaved rivers, and larger rare climates
     B:"0.5 generation"=true
+
+    # Use 1.6 compatibility mode
     B:1.6Compatibility=false
+
+    # place little islands near shore rather than in deep ocean
     B:"Allow Derpy Islands"=false
+
+    # Biome size, exponential: 4 is regular and 6 is large biomes
     I:"Biome Size"=3
+
+    # per thousand; vanilla is 10
     I:"Mushroom Island Incidence"=10
+
+    # generate as if CC weren't on; for loading pre-existing worlds or just preventing chunk boundaries
     B:"No Generation Changes"=false
+
+    # suppress Bop sub-biome generation
     B:NoBoPSubBiomes=true
+
+    # Percentage of rivers prevented; changes cause chunk boundaries at some rivers
     I:PercentRiverReduction=0
+
+    # increase smoothing steps; also shrinks unusual biomes some; changing produces occaisional chunk walls
     B:"Smoother Coastlines"=true
+
+    # add testing routines and crash in suspicious circumstances
     B:TestingMode=false
+
+    # Include vanilla biomes in world
     B:VanillaBiomesOn=true
+
+    # Generate land masses and climate zones similar to vanilla 1.7
     B:VanillaLandAndClimate=false
+
+    # True for triple-width rivers
     B:WiderRivers=false
+
+    # impose Climate Control generation on the Biomes o' Plenty world type
     B:alterBoPWorlds=false
+
+    # impose Climate Control generation on Highlands world types
     B:alterHighlandsWorlds=false
+
+    # biomes not saved on edges; more than 3 has no effect; -1 deactivates saving biomes
     I:biomeRingsNotSaved=3
+
+    # climate not saved on edges; -1 deactivates saving climates
     I:climateRingsNotSaved=3
+
+    # Have Climate Control set the biomes for village generation; may be incompatible with village mods
     B:controlVillageBiomes=false
+
+    # max height value for allowing rivers; 10.0 allows everything; 0.75 is plains but no hills
     D:maxChasm=10.0
+
+    # subbiomes not saved on edges, default 3, -1 deactivates saving sub-biomes
     I:subBiomeRingsNotSaved=0
+
+    # True for double-width beaches
     B:wideBeaches=false
 }
 
 
+##########################################################################################################
+# climate incidences
+#--------------------------------------------------------------------------------------------------------#
+# Blocks of land are randomly assigned to each zone with a frequency proportional to the incidence. Processing eliminates some extreme climates later, especially for quarter size zones. Consider doubling hot and snowy incidences for quarter size zones.
+##########################################################################################################
+
 "climate incidences" {
+    # relative incidence of cool zones like forest/plains/hills/taiga/roofed forest
     I:"Cool Zone Incidence"=1
+
+    # relative incidence of hot zones like savanna/desert/plains/mesa
     I:"Hot Zone Incidence"=1
+
+    # relative incidence of snowy zones
     I:"Snowy Zone Incidence"=1
+
+    # relative incidence of warm zones like forest/plains/hills/jungle/swamp
     I:"Warm Zone Incidence"=1
 }
 
 
+##########################################################################################################
+# climate zone parameters
+#--------------------------------------------------------------------------------------------------------#
+# Full-size is similar to 1.7 defaults. Half-size creates zones similar to pre-1.7 snowy zones. Quarter-size creates fairly small zones but the hot and snowy incidences are limited
+##########################################################################################################
+
 "climate zone parameters" {
+    # half the climate zone size from vanilla, unless quartering
     B:"Half Zone Size"=true
+
+    # quarter the climate zone size from vanilla
     B:"Quarter Zone Size"=false
+
+    # ignore climate zones altogether
     B:"Random Biomes"=false
 }
 
 
 general {
-    # Comma-separated list of dimension IDs, used only if include list is *
     S:excludeDimensionIDs=-1,1
-
-    # Comma-separated list of dimension IDs, put * to use exclude list
     S:includeDimensionIDs=0
 }
 
 
+##########################################################################################################
+# ocean control parameters
+#--------------------------------------------------------------------------------------------------------#
+# Frequencies are x per thousand but a little goes a very long way because seeds grow a lot. About half the total continent frequencies is the percent land. For worlds with 1.7-like generation set large island seeds to about 300. That will largely fill the oceans after seed growth.
+##########################################################################################################
+
 "ocean control parameters" {
+    # frequency of large continent seeds, about 8000x16000
     I:"Large Continent Frequency"=0
+
+    # frequency of large island seeds, about 1000x2000
     I:"Large Island Frequency"=35
+
+    # frequency of medium continent seeds, about 4000x8000
     I:"Medium Continent Frequency"=12
+
+    # frequency of medium island seeds, about 500x1000
     I:"Medium Island Frequency"=40
+
+    # True reduces the chance of landmasses merging
     B:SeparateLandmasses=true
+
+    # frequency of small continent seeds, about 2000x4000
     I:"Small Continent Frequency"=18
 }
 
