--- a/config/climatecontrol.cfg
+++ b/config/climatecontrol.cfg
@@ -11,7 +11,7 @@
     B:"Allow Derpy Islands"=false
 
     # Biome size, exponential: 4 is regular and 6 is large biomes
-    I:"Biome Size"=3
+    I:"Biome Size"=4
 
     # per thousand; vanilla is 10
     I:"Mushroom Island Incidence"=10
@@ -23,7 +23,7 @@
     B:NoBoPSubBiomes=true
 
     # Percentage of rivers prevented; changes cause chunk boundaries at some rivers
-    I:PercentRiverReduction=0
+    I:PercentRiverReduction=100
 
     # increase smoothing steps; also shrinks unusual biomes some; changing produces occaisional chunk walls
     B:"Smoother Coastlines"=true
@@ -122,19 +122,19 @@ general {
     I:"Large Continent Frequency"=0
 
     # frequency of large island seeds, about 1000x2000
-    I:"Large Island Frequency"=35
+    I:"Large Island Frequency"=70
 
     # frequency of medium continent seeds, about 4000x8000
-    I:"Medium Continent Frequency"=12
+    I:"Medium Continent Frequency"=24
 
     # frequency of medium island seeds, about 500x1000
-    I:"Medium Island Frequency"=40
+    I:"Medium Island Frequency"=80
 
     # True reduces the chance of landmasses merging
     B:SeparateLandmasses=true
 
     # frequency of small continent seeds, about 2000x4000
-    I:"Small Continent Frequency"=18
+    I:"Small Continent Frequency"=36
 }
 
 
