RTG 0.5.0 changes + incoming et futurm, agricraft, pneumaticraft, forge, galaxy space; remove twilight forest.

--- a/config/ImmersiveEngineering.cfg
+++ b/config/ImmersiveEngineering.cfg
@@ -47,7 +47,7 @@ compatability {
     B:"Enable Compatmodule: Railcraft"=true
 
     # Set this to false to disable IE's built in compatability with TConstruct
-    B:"Enable Compatmodule: TConstruct"=true
+    B:"Enable Compatmodule: TConstruct"=false
 
     # Set this to false to disable IE's built in compatability with Thaumcraft
     B:"Enable Compatmodule: Thaumcraft"=true
@@ -74,7 +74,7 @@ compatability {
     B:"Enable Compatmodule: denseores"=false
 
     # Set this to false to disable IE's built in compatability with etfuturum
-    B:"Enable Compatmodule: etfuturum"=false
+    B:"Enable Compatmodule: etfuturum"=true
 
     # Set this to false to disable IE's built in compatability with gregtech
     B:"Enable Compatmodule: gregtech"=false
