--- a/config/biomesoplenty/misc.cfg
+++ b/config/biomesoplenty/misc.cfg
@@ -15,10 +15,10 @@
 
 
 "spawn settings" {
-    B:"Only Spawn On Beaches"=false
+    B:"Only Spawn On Beaches"=true
 
     # Must be 256 or higher
-    I:"Spawn Location Search Radius"=1024
+    I:"Spawn Location Search Radius"=4096
 }
 
 
