--- a/config/chisel.cfg
+++ b/config/chisel.cfg
@@ -164,7 +164,7 @@ features {
     B:tfUnderBrick=true
     B:thaumium=true
     B:tin=true
-    B:torch=true
+    B:torch=false
     B:twilghtForest=true
     B:twilightForest=true
     B:tyrian=true
@@ -267,13 +267,13 @@ tweaks {
 
 worldgen {
     # Amount of andesite to generate in the world; use 0 for none.
-    I:andesiteAmount=8
+    I:andesiteAmount=0
 
     # Amount of diorite to generate in the world; use 0 for none.
-    I:dioriteAmount=8
+    I:dioriteAmount=0
 
     # Amount of granite to generate in the world; use 0 for none.
-    I:graniteAmount=8
+    I:graniteAmount=0
 
     # Amount of limestone to generate in the world; use 0 for none
     I:limestoneAmount=8
