--- a/config/AppliedEnergistics2/Facades.cfg
+++ b/config/AppliedEnergistics2/Facades.cfg
@@ -27,6 +27,78 @@ ae2stuff {
 }
 
 
+agricraft {
+    B:channelValve=false
+    B:channelValve.1=false
+    B:cropAllium=false
+    B:cropAurigold=false
+    B:cropBotaniaBlack=false
+    B:cropBotaniaBlue=false
+    B:cropBotaniaBrown=false
+    B:cropBotaniaCyan=false
+    B:cropBotaniaGray=false
+    B:cropBotaniaGreen=false
+    B:cropBotaniaLightBlue=false
+    B:cropBotaniaLightGray=false
+    B:cropBotaniaLime=false
+    B:cropBotaniaMagenta=false
+    B:cropBotaniaOrange=false
+    B:cropBotaniaPink=false
+    B:cropBotaniaPurple=false
+    B:cropBotaniaRed=false
+    B:cropBotaniaWhite=false
+    B:cropBotaniaYellow=false
+    B:cropCactus=false
+    B:cropCarrot=false
+    B:cropCinderpearl=false
+    B:cropCuprosia=false
+    B:cropDaisy=false
+    B:cropDandelion=false
+    B:cropDiamahlia=false
+    B:cropEmeryllis=false
+    B:cropFerranium=false
+    B:cropJaslumine=false
+    B:cropLapender=false
+    B:cropNiccissus=false
+    B:cropNitorWart=false
+    B:cropOrchid=false
+    B:cropOsmonium=false
+    B:cropPetinia=false
+    B:cropPlatiolus=false
+    B:cropPlombean=false
+    B:cropPoppy=false
+    B:cropPotato=false
+    B:cropQuartzanthemum=false
+    B:cropRedstodendron=false
+    B:cropShimmerleaf=false
+    B:cropShroomBrown=false
+    B:cropShroomRed=false
+    B:cropSilverweed=false
+    B:cropSugarcane=false
+    B:cropTaintedRoot=false
+    B:cropTulipOrange=false
+    B:cropTulipPink=false
+    B:cropTulipRed=false
+    B:cropTulipWhite=false
+    B:cropVishroom=false
+    B:crops=false
+    B:fence=false
+    B:fenceGate=false
+    B:grate=false
+    B:peripheral=false
+    B:seedAnalyzer=false
+    B:seedStorage=false
+    B:sprinkler=false
+    B:waterChannel=false
+    B:waterChannel.1=false
+    B:waterChannelFull=false
+    B:waterChannelFull.1=false
+    B:waterPad=false
+    B:waterPadFull=false
+    B:waterTank=false
+}
+
+
 amtgen {
     B:fuelGenerator=false
     B:lpTransformer=false
@@ -1866,6 +1938,7 @@ biomesoplenty {
     B:newBopDirt.3=true
     B:newBopDirt.4=true
     B:newBopDirt.5=true
+    B:newBopFarmland=false
     B:newBopGrass=false
     B:newBopGrass.1=false
     B:newBopGrass.2=false
@@ -4878,6 +4951,71 @@ enviromine {
 }
 
 
+etfuturum {
+    B:anvil=false
+    B:anvil.4=false
+    B:anvil.8=false
+    B:banner=false
+    B:beacon=false
+    B:beetroots=false
+    B:brewingstand=false
+    B:brownmushroom=true
+    B:chorusflower=false
+    B:chorusplant=false
+    B:coarsedirt=true
+    B:cryingobsidian=true
+    B:daylightdetectorinverted=false
+    B:daylightsensor=false
+    B:dooracacia=false
+    B:doorbirch=false
+    B:doordarkoak=false
+    B:doorjungle=false
+    B:doorspruce=false
+    B:enchantmenttable=false
+    B:endbricks=true
+    B:endrod=false
+    B:fenceacacia=false
+    B:fencebirch=false
+    B:fencedarkoak=false
+    B:fencegateacacia=false
+    B:fencegatebirch=false
+    B:fencegatedarkoak=false
+    B:fencegatejungle=false
+    B:fencegatespruce=false
+    B:fencejungle=false
+    B:fenceoak=false
+    B:fencespruce=false
+    B:frostedice=false
+    B:grasspath=false
+    B:irontrapdoor=false
+    B:oldgravel=true
+    B:prismarineblock=true
+    B:prismarineblock.1=true
+    B:prismarineblock.2=true
+    B:purpurblock=true
+    B:purpurpillar=true
+    B:purpurslab=false
+    B:purpurstairs=false
+    B:redmushroom=true
+    B:redsandstone=true
+    B:redsandstone.1=true
+    B:redsandstone.2=true
+    B:redsandstoneslab=false
+    B:redsandstonestairs=false
+    B:rose=false
+    B:sealantern=true
+    B:slime=false
+    B:sponge=true
+    B:sponge.1=true
+    B:stone.1=true
+    B:stone.2=true
+    B:stone.3=true
+    B:stone.4=true
+    B:stone.5=true
+    B:stone.6=true
+}
+
+
 expandedindustry {
     B:PoweredRailBridge=false
     B:RailBridge=false
@@ -6207,8 +6345,19 @@ galaxyspace {
     B:barnarda2leaves=false
     B:barnarda2log=true
     B:barnarda2sapling=false
+    B:barnardaCcrystal=false
+    B:barnardaCdandelion1=false
+    B:barnardaCdandelion2=false
+    B:barnardaCdandelion3=false
+    B:barnardaCdirt=true
+    B:barnardaCgrass=false
+    B:barnardaCleaves=false
+    B:barnardaClog=true
+    B:barnardaCsapling=false
     B:barnardaEgrunt=true
     B:barnardaEsubgrunt=true
+    B:callistogrunt=true
+    B:callistosubgrunt=true
     B:ceresTChestT4=false
     B:ceresbricks=true
     B:ceresglowstone=true
@@ -11265,6 +11414,66 @@ plantmegapack {
 
 playerrugs {
     B:playerRug=false
+}
+
+
+pneumaticcraft {
+    B:advancedAirCompressor=false
+    B:advancedLiquidCompressor=false
+    B:advancedPressureTube=false
+    B:aerialInterface=false
+    B:airCannon=false
+    B:airCompressor=false
+    B:aphorismTile=false
+    B:assemblyController=false
+    B:assemblyDrill=false
+    B:assemblyIOUnit=false
+    B:assemblyLaser=false
+    B:assemblyPlatform=false
+    B:chargingStation=false
+    B:compressedIronBlock=false
+    B:creativeCompressor=false
+    B:diesel=false
+    B:droneInterface=false
+    B:droneRedstoneEmitter=false
+    B:electrostaticCompressor=false
+    B:elevatorBase=false
+    B:elevatorCaller=false
+    B:elevatorFrame=false
+    B:etchingAcid=false
+    B:fluxCompressor=false
+    B:fuel=false
+    B:gasLift=false
+    B:heatSink=false
+    B:kerosene=false
+    B:keroseneLamp=false
+    B:keroseneLampLight=false
+    B:liquidCompressor=false
+    B:liquidHopper=false
+    B:lpg=false
+    B:lubricant=false
+    B:oil=false
+    B:omnidirectionalHopper=false
+    B:plasticBlock=false
+    B:plasticMixer=false
+    B:pneumaticDoor=false
+    B:pneumaticDoorBase=false
+    B:pneumaticDynamo=false
+    B:pressureChamberInterface=false
+    B:pressureChamberValve=false
+    B:pressureChamberWall=false
+    B:pressureChamberWall.6=false
+    B:pressureTube=false
+    B:programmableController=false
+    B:programmer=false
+    B:refinery=false
+    B:securityStation=false
+    B:sentryTurret=false
+    B:thermopneumaticProcessingPlant=false
+    B:universalSensor=false
+    B:uvLightBox=false
+    B:vacuumPump=false
+    B:vortexTube=false
 }
 
 
